--- a/agorava-tripit-cdi/pom.xml
+++ b/agorava-tripit-cdi/pom.xml
@@ -125,8 +125,8 @@
                 </dependency>
 
                 <dependency>
-                    <groupId>org.jboss.solder</groupId>
-                    <artifactId>solder-impl</artifactId>
+                    <groupId>org.agorava</groupId>
+                    <artifactId>solder-generics-impl</artifactId>
                 </dependency>
             </dependencies>
 
